2018.11/_sources/plugins/available/feature-classifier/extract-reads.txt
extract-reads: Extract reads from reference
===========================================



.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <h4>Docstring:</h4>
         <pre>Usage: qiime feature-classifier extract-reads [OPTIONS]

     Extract sequencing-like reads from a reference database.

   Options:
     --i-sequences ARTIFACT PATH FeatureData[Sequence]
                                     [required]
     --p-f-primer TEXT               forward primer sequence  [required]
     --p-r-primer TEXT               reverse primer sequence  [required]
     --p-trunc-len INTEGER           read is cut to trunc_len if trunc_len is
                                     positive. Applied before trim_left.
                                     [default: 0]
     --p-trim-left INTEGER           trim_left nucleotides are removed from the
                                     5' end if trim_left is positive. Applied
                                     after trunc_len.  [default: 0]
     --p-identity FLOAT              minimum combined primer match identity
                                     threshold.  [default: 0.8]
     --p-min-length INTEGER RANGE    Minimum amplicon length. Shorter amplicons
                                     are discarded. Applied after trimming and
                                     truncation, so be aware that trimming may
                                     impact sequence retention. Set to zero to
                                     disable min length filtering.  [default: 50]
     --p-max-length INTEGER RANGE    Maximum amplicon length. Longer amplicons
                                     are discarded. Applied before trimming and
                                     truncation, so plan accordingly. Set to zero
                                     (default) to disable max length filtering.
                                     [default: 0]
     --o-reads ARTIFACT PATH FeatureData[Sequence]
                                     [required if not passing --output-dir]
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config FILE               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --citations                     Show citations and exit.
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
       <h4>Import:</h4>

.. command-block::
   :no-exec:

   from qiime2.plugins.feature_classifier.methods import extract_reads

.. raw:: html

       <h4>Docstring:</h4>
         <pre>Extract reads from reference

   Extract sequencing-like reads from a reference database.

   Parameters
   ----------
   sequences : FeatureData[Sequence]
   f_primer : Str
       forward primer sequence
   r_primer : Str
       reverse primer sequence
   trunc_len : Int, optional
       read is cut to trunc_len if trunc_len is positive. Applied before
       trim_left.
   trim_left : Int, optional
       trim_left nucleotides are removed from the 5' end if trim_left is
       positive. Applied after trunc_len.
   identity : Float, optional
       minimum combined primer match identity threshold.
   min_length : Int % Range(0, None), optional
       Minimum amplicon length. Shorter amplicons are discarded. Applied after
       trimming and truncation, so be aware that trimming may impact sequence
       retention. Set to zero to disable min length filtering.
   max_length : Int % Range(0, None), optional
       Maximum amplicon length. Longer amplicons are discarded. Applied before
       trimming and truncation, so plan accordingly. Set to zero (default) to
       disable max length filtering.

   Returns
   -------
   reads : FeatureData[Sequence]</pre>
       </div>
     </div>
   </div>